--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -588,9 +588,16 @@ body.scrolled .header .mobile-menu .container {
 	padding: 30px 20px;
 }
 
+@media (max-width: 575px) {
+	body.scrolled .header .mobile-menu .container {
+		padding: 15px 15px;
+	}
+}
 
 
-///////
+
+
+
 
 
 
