--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -453,129 +453,135 @@ a{
 
 
 ///////cart items //////
+.cart-sidebar{
+	.items_card__wrapper{
+		overflow-x: hidden;
+		padding: 40px 40px 40px 40px;
+	}
 
-.items_card__wrapper{
-	overflow-x: hidden;
-	padding: 40px;
-}
+	.items_card.cart {
+		display: grid;
+		justify-content: start!important;
 
-.items_card.cart {
-	display: grid;
-	justify-content: start!important;
-
-	.card {
-		display: flex;
-		align-items: flex-start;
-		gap: 20px;
-		margin-bottom: 20px;
-		width: 100%;
-
-		.card_image.cart{
-			width: 250px;
-			height: 199px;
-
-			.product-badge{
-				top: 10px;
-				left: 10px;
-			}
-			.view-more{
-				padding: 10px;
-			}
-
-		}
-
-
-
-
-		.cart-item-info {
-			display: grid;
-			gap: 8px;
+		.card {
+			display: flex;
+			align-items: flex-start;
+			gap: 20px;
+			margin-bottom: 20px;
 			width: 100%;
 
+			.card_image{
+				width: 250px!important;
+				height: 199px;
 
-			.cart-item__title{
-				display: flex;
-				justify-content: space-between;
-				h4 {
+				.product-badge{
+					top: 10px;
+					left: 10px;
+				}
+				.view-more{
+					padding: 10px;
+				}
+
+			}
+
+
+
+
+			.cart-item-info {
+				display: grid;
+				gap: 8px;
+				width: 100%;
+
+
+				.cart-item__title{
+					display: flex;
+					justify-content: space-between;
+					gap: 10px;
+					h4 {
+						color: #3A3836;
+						text-align: center;
+
+						font-family: 'Poppins', sans-serif;
+						font-size: 16px;
+						font-style: normal;
+						font-weight: 300;
+						line-height: 24px; /* 150% */
+						letter-spacing: 0.32px;
+					}
+				}
+
+				.price {
 					color: #3A3836;
-					text-align: center;
 
 					font-family: 'Poppins', sans-serif;
 					font-size: 16px;
 					font-style: normal;
-					font-weight: 300;
+					font-weight: 600;
 					line-height: 24px; /* 150% */
 					letter-spacing: 0.32px;
 				}
-			}
 
-			.price {
-				color: #3A3836;
-
-				font-family: 'Poppins', sans-serif;
-				font-size: 16px;
-				font-style: normal;
-				font-weight: 600;
-				line-height: 24px; /* 150% */
-				letter-spacing: 0.32px;
-			}
-
-			.product_det{
-				display: flex;
-				gap: 5px ;
-				.product__name{
-					color: var(--Dark-Grey-Secondary, #6E7172);
-					text-align: center;
-					font-family: 'Poppins', sans-serif;
-					font-size: 14px;
-					font-style: normal;
-					font-weight: 300;
-					line-height: 22px; /* 157.143% */
-					letter-spacing: 0.28px;
+				.product_det{
+					display: flex;
+					gap: 5px ;
+					.product__name{
+						color: var(--Dark-Grey-Secondary, #6E7172);
+						text-align: center;
+						font-family: 'Poppins', sans-serif;
+						font-size: 14px;
+						font-style: normal;
+						font-weight: 300;
+						line-height: 22px; /* 157.143% */
+						letter-spacing: 0.28px;
+					}
+					.product__var{
+						color: var(--Black-Primary, #000);
+						font-family: 'Poppins', sans-serif;
+						font-size: 14px;
+						font-style: normal;
+						font-weight: 300;
+						line-height: 22px;
+						letter-spacing: 0.28px;
+					}
 				}
-				.product__var{
-					color: var(--Black-Primary, #000);
-					font-family: 'Poppins', sans-serif;
-					font-size: 14px;
-					font-style: normal;
-					font-weight: 300;
-					line-height: 22px;
-					letter-spacing: 0.28px;
+
+				.qty {
+					display: flex;
+					align-items: center;
+					margin-top: 8px;
+
+					button {
+						width: 24px;
+						height: 24px;
+						border: 1px solid #ccc;
+						background: none;
+						cursor: pointer;
+					}
+					input {
+						width: 30px;
+						text-align: center;
+						border: 1px solid #ccc;
+						margin: 0 5px;
+					}
 				}
 			}
 
-			.qty {
+			.remove {
 				display: flex;
+				justify-content: center;
 				align-items: center;
-				margin-top: 8px;
-
-				button {
-					width: 24px;
-					height: 24px;
-					border: 1px solid #ccc;
-					background: none;
-					cursor: pointer;
-				}
-				input {
-					width: 30px;
-					text-align: center;
-					border: 1px solid #ccc;
-					margin: 0 5px;
-				}
+				background: none;
+				border: none;
+				font-size: 20px;
+				cursor: pointer;
+				padding: 0;
 			}
-		}
-
-		.remove {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			background: none;
-			border: none;
-			font-size: 20px;
-			cursor: pointer;
 		}
 	}
 }
+
+
+
 
 
 
@@ -585,7 +591,7 @@ body.scrolled .cart-sidebar .cart-header {
 }
 
 body.scrolled .header .mobile-menu .container {
-	padding: 30px 20px;
+	padding: 30px 15px;
 }
 
 @media (max-width: 575px) {
@@ -593,7 +599,7 @@ body.scrolled .header .mobile-menu .container {
 		padding: 15px 15px;
 	}
 }
-
+/////////////////////////
 
 
 
